# zerdisha-scrapy

./: PROCESS.md  README.md  pyproject.toml  requirements.txt  scrapy.cfg
.github/: copilot-instructions.md
tests/: __init__.py  test_annapurna_simple.py  test_himalayan_simple.py  test_kathmandupost_simple.py  test_nagarik_simple.py  test_nayapatrika.py  test_pipelines.py
zerdisha_scrapers/: items.py  middlewares.py  pipelines.py  settings.py
zerdisha_scrapers/spiders/: annapurna.py  example.py  himalayan.py  kathmandupost.py  nagarik.py  nayapatrika.py
