[project]
name = "zerdisha-scrapy"
version = "0.1.0"
description = "zerdisha scraper tool"
authors = [
    {name = "Aashish Bhandari",email = "abisamism@gmail.com"}
]
license = {text = "Unlicence"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "scrapy (>=2.13.3,<3.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "feedparser (>=6.0.11,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
